Update main for Quarts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 python-telegram-bot>=20.0
 quart>=0.18.0
-pandas
-numpy
-requests
-scikit-learn
-tensorflow
-prophet
-ta
-textblob
-ccxt
-nest_asyncio
+aiohttp>=3.8.0
+pandas>=1.5.0
+numpy>=1.22.0
+prophet>=1.1.0
+scikit-learn>=1.2.0
+tensorflow>=2.11.0
+ta>=0.10.0
+textblob>=0.17.1
+ccxt>=3.0.0
+nest_asyncio>=1.5.0
